# price-pulse

./: .gitignore  README.md  main.py  pyproject.toml
db/: models.py  session.py
db/init_data/: init_categories.py
scraper/: categories.py  kaufland_glovo_scraper.py  scraper.py
