[project]
name = "price-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.0",
    "playwright>=1.53.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
